--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
 
 
 <Button
-    android:id="@+id/btn2"
+    android:id="@+id/btnGabi"
     android:layout_width="150dp"
     android:layout_height="wrap_content"
     android:text="Aluno2"
@@ -14,49 +14,49 @@
     android:layout_marginEnd="46dp" />
 
 <Button
-    android:id="@+id/btn1"
+    android:id="@+id/btnTuri"
     android:layout_width="150dp"
     android:layout_height="wrap_content"
     android:text="Aluno1"
     android:layout_marginRight="101dp"
     android:layout_marginStart="22dp"
-    android:layout_alignBaseline="@+id/btn2"
-    android:layout_alignBottom="@+id/btn2"
+    android:layout_alignBaseline="@+id/btnGabi"
+    android:layout_alignBottom="@+id/btnGabi"
     android:layout_alignParentStart="true" />
 
 <Button
-    android:id="@+id/btn3"
+    android:id="@+id/btnGui"
     android:layout_width="150dp"
     android:layout_height="wrap_content"
-    android:layout_alignStart="@+id/btn1"
-    android:layout_below="@+id/btn1"
+    android:layout_alignStart="@+id/btnTuri"
+    android:layout_below="@+id/btnTuri"
     android:layout_marginTop="31dp"
     android:text="Aluno3" />
 
 <Button
-    android:id="@+id/btn4"
+    android:id="@+id/btnJulio"
     android:layout_width="150dp"
     android:layout_height="wrap_content"
-    android:layout_alignStart="@+id/btn2"
-    android:layout_alignTop="@+id/btn3"
+    android:layout_alignStart="@+id/btnGabi"
+    android:layout_alignTop="@+id/btnGui"
     android:text="Aluno4" />
 
 <Button
-    android:id="@+id/btn5"
+    android:id="@+id/btnDalfito"
     android:layout_width="150dp"
     android:layout_height="wrap_content"
-    android:layout_alignStart="@+id/btn3"
-    android:layout_below="@+id/btn3"
+    android:layout_alignStart="@+id/btnGui"
+    android:layout_below="@+id/btnGui"
     android:layout_marginTop="28dp"
     android:text="Aluno5" />
 
 <Button
-    android:id="@+id/btn6"
+    android:id="@+id/btnSamuel"
     android:layout_width="150dp"
     android:layout_height="wrap_content"
-    android:layout_alignBaseline="@+id/btn5"
-    android:layout_alignBottom="@+id/btn5"
-    android:layout_alignStart="@+id/btn4"
+    android:layout_alignBaseline="@+id/btnDalfito"
+    android:layout_alignBottom="@+id/btnDalfito"
+    android:layout_alignStart="@+id/btnJulio"
     android:text="Aluno6" />
 
 <Button
